# money

./: .gitignore  .swcrc  .swcrc_new_prod  .swcrc_old_prod  Cargo.toml  Readme.md  Rocket.toml  build_assets.bat  build_web.mjs  compile_assets.bat  eslint.config.mjs  index.html  package-lock.json  package.json  sort_config.py  spack.config.js  tsconfig.json  vite.config.ts  xo.config.js
.github/workflows/: clippy.yml  tests.yml
common/: Cargo.toml
common/src/: lib.rs
grafana/: general.json  new-dashboard.json
migrations/2022-04-24-090624_create_uploads/: up.sql
migrations/2022-04-24-091738_create_upload_cells/: down.sql  up.sql
migrations/2022-05-28-024425_add_table_shape_to_upload/: down.sql  up.sql
migrations/2022-06-09-053527_add_accounts/: up.sql
money-web/: Cargo.toml
money-web/src/: backend.rs  lib.rs  uploader.rs
old/: Cargo.toml  package.json
old/src/: db.rs  main.rs
old/src/importer/: categorizer.rs  qfx_file.rs
old/src/server/: mod.rs
old/web/src/: api.ts  timer.ts
old/web/src/pages/plot/: index.ts  plotter.ts  stack_area.ts
src/: App.tsx  api.rs  components.rs  config.rs  data.rs  data_store.rs  db.rs  error.rs  index.css  lib.rs  main.rs  main.tsx  models.rs  schema.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/schema/: accounts.rs  categories.rs  dates.rs  mod.rs  transactions.rs  uncategorized_transactions.rs
src-tauri/src/loader/: categorizer.rs  config.rs  csv_file.rs  mod.rs  qfx_file.rs
src/api/: account.rs  mod.rs  upload.rs
src/backend/: mod.rs  upload.rs
src/backend/db/: migrations.rs  mod.rs
src/backend/schema/: mod.rs  v1.rs
src/data_store/: mod.rs  schema.rs
src/data_store/schema/: mod.rs  v1.rs
src/importer/: app.rs  categorizer.rs  config.rs  csv_file.rs  loader.rs  mod.rs  qfx.rs  qfx_file.rs
src/importer/qfx_file/: header.rs  lexer.rs  mod.rs
src/money/: api.ts  app.css  app.tsx
src/old/: error.rs  mod.rs
src/old/api/: account.rs  mod.rs  upload.rs
src/old/backend/: mod.rs  upload.rs
src/old/backend/schema/: mod.rs  v1.rs
src/server/: mod.rs
static/: components.js  home_page.js  index.html  style.css  table.js  ui.js  upload_page.js
web/: accounts_page.ts  api.ts  components.ts  home_page.ts  index.html  money.css  money.ts  page.ts  upload_page.ts
web/api/: base.ts  upload.ts
web/assets/js/: main.js  plot.js
web/js/: main.js  plot.js
web/src/: api.ts  data_pane.ts  money.ts  plot.ts  plotter.ts  stack_area.ts  timer.ts
web/src/components/: data_pane.ts  header.ts  table.ts
web/src/pages/: plot.ts  transactions.ts
web_old/: money.ts
web_old/api/: account.ts  base.ts
