[package]
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2024"
name = "money"
version = "0.2.1"

[dependencies]
# Error handling
color-eyre = "0.6.3"

# Pretty printing
console = "0.16.0"
indicatif = "0.18.0"

# OS Info
dirs = "6.0.0"

# File parsing
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8.35"
chrono = "0.4.40"
self_cell = "1.2.0"
regex = "1.11.1"
patricia_tree = "0.9.0"

# Data store
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "backup"] }
num_enum = "0.7.4"

# Web Server
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
warp = "0.3.7"
