[package]
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2024"
name = "money"
version = "0.2.2"

[dependencies]
# Error handling
color-eyre = "0.6.3"

# Pretty printing
console = "0.16.0"
indicatif = "0.18.0"

# OS Info
dirs = "6.0.0"

# File parsing
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8.35"
chrono = "0.4.40"
self_cell = "1.2.0"
patricia_tree = "0.9.0"

# Data store
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
libsqlite3-sys = "=0.30.1"
num_enum = "0.7.4"

# Web Server
axum = { version = "0.8.4", default-features = false, features = [
    "json",
    "tokio",
    "http1",
] }
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
