[package]
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2024"
name = "money"
version = "0.2.2"

[dependencies]
# Core
color-eyre = "0.6.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }

# Pretty printing
console = "0.16.0"
indicatif = "0.18.0"

# OS Info
dirs = "6.0.0"

# File parsing
toml = "0.9.2"
csv-async = { version = "1.3.1", default-features = false, features = [
    "tokio",
] }
encoding_rs = "0.8.35"
chrono = "0.4.40"
self_cell = "1.2.0"
patricia_tree = "0.10.1"
rust_decimal = "1.39.0"

# Data store
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "rust_decimal",
] }

[profile.release]
debug = true
