[package]
name = "money-web"
version = "0.1.0"
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.76"
web-sys = {version = "0.3.41", features=["FileReader"], default-features = false}
js-sys = "0.3"
enum-iterator = "0.7.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

csv = "1.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1
lto = true
opt-level = "s"
