[package]
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2018"
name = "money-web"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
csv = "1.1"
enum-iterator = "0.7.0"
serde = {version = "1.0"}
serde_json = "1.0"

console_error_panic_hook = {version = "0.1.6", optional = true}
console_log = "0.2"
log = "0.4"

js-sys = "0.3"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.19"

common = {path = "../common"}

[dependencies.web-sys]
default-features = false
features = [
  "FileReader",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
]
version = "0.3.41"

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1
lto = true
opt-level = "s"
