[package]
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2024"
name = "money"
version = "0.2.2"
description = "A simple expense tracking program"

[lib]
name = "money_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
