[package]
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2024"
name = "money"
version = "0.2.2"
description = "A simple expense tracking program"

[lib]
name = "money_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
color-eyre = "0.6.3"
num_enum = "0.7.4"
thiserror = "2.0.17"

# File parsing
toml = "0.9.2"
csv-async = { version = "1.3.1", default-features = false, features = [
    "tokio",
] }
encoding_rs = "0.8.35"
self_cell = "1.2.0"
patricia_tree = "0.10.1"

# Data store
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
] }

# GUI
tauri = { version = "=2.9.0", features = [] }
tauri-plugin-opener = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
